--- a/Car Management/appsettings.json
+++ b/Car Management/appsettings.json
@@ -6,15 +6,15 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DataEntities": "Server=DAVID;Database=CarManagement Database; User Id=Sa;Password=Kendrick96;Trusted_Connection=True; MultipleActiveResultSets=True;Integrated Security=True"
+    "DataEntities": "Data Source=USER\\SQLEXPRESS;Initial Catalog=CyberRepoDatabase;Trusted_Connection=True;MultipleActiveResultSets=True;Integrated Security=True"
   },
-  "Token": {
-    "Key": "CYBERSPACE123456789",
-    "Issuer": "http://Authorization.org",
-    "Audience": "http://Authorization.org"
-  },
-  "ApplicationSettings": {
-    "JWT_Secret": "123456789t",
-    "Client_URL": "http://localhost:3200"
-  }
-}
+   "Token": {
+      "Key": "CYBERSPACE123456789",
+      "Issuer": "http://Authorization.org",
+      "Audience": "http://Authorization.org"
+   },
+    "ApplicationSettings": {
+      "JWT_Secret": "123456789t",
+      "Client_URL": "http://localhost:4200"
+   }
+ }
